# ciafomer

./: .gitignore  README.md  build.mjs  package-lock.json  package.json  tsconfig.json
glossary/: default.json
python-worker/: requirements.txt  worker.py
scripts/: dev.sh
src/: capture-overlay.html  capture-overlay.ts  index.html  main.ts  mode-panel.html  mode-panel.ts  result-panel.html  result-panel.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cancellation.rs  history.rs  lib.rs  main.rs  metrics.rs  realtime.rs  scheduler.rs  state_machine.rs
src-tauri/src/audio/: mod.rs  ring_buffer.rs  vad.rs  wake.rs
src-tauri/src/capture/: mod.rs  screen.rs
src-tauri/src/ocr/: mod.rs  python_engine.rs
src-tauri/src/translate/: cache.rs  deepseek.rs  glossary.rs  mod.rs  normalize.rs  sqlite_cache.rs
