[package]
name = "ciallo"
version = "0.1.0"
edition = "2021"
description = "Voice wake + multi-mode translation desktop assistant"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
cpal = "0.15"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
crossbeam-channel = "0.5"

# Phase 2: Translation pipeline
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
lru = "0.12"
blake3 = "1"
whatlang = "0.16"
regex = "1"

# Phase 3: OCR Python worker IPC
rmp-serde = "1"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
